@@ -25,6 +25,8 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Random;
 
+import org.apache.bookkeeper.replication.ReplicationException.CompatibilityException;
+import org.apache.bookkeeper.replication.ReplicationException.UnavailableException;
 import org.apache.bookkeeper.test.PortManager;
 
 import org.apache.bookkeeper.bookie.Bookie;
@@ -78,7 +80,9 @@ public class BookKeeperTestBase extends ZooKeeperTestBase {
 
     class TestBookieServer extends BookieServer {
         public TestBookieServer(ServerConfiguration conf)
-            throws IOException, KeeperException, InterruptedException, BookieException {
+            throws IOException,
+                KeeperException, InterruptedException, BookieException,
+                UnavailableException, CompatibilityException {
             super(conf);
         }
 
